fix location info not aligned to the left on mobile

--- a/src/sass/elements/_contact-section.scss
+++ b/src/sass/elements/_contact-section.scss
@@ -22,6 +22,7 @@
       color: $sc-lilia;
     }
     p{
+      text-align: left;
       font-size: 1.1em;
       line-height: 1.5em;
       position: relative;
